# terravision

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .terraformignore  404.html  AGENTS.md  CLAUDE.md  COMPLETE_TRANSFORMER_MAPPING.md  CONTRIBUTING.md  DYNAMIC_HANDLERS_QUICKSTART.md  Dockerfile  EXECUTION_ORDER_FEATURE.md  HANDLER_CONFIG_GUIDE.md  MANIFEST.in  PHASE4-BUGFIXES-COMPLETION-SUMMARY.md  PHASE4-COMPLETION-SUMMARY.md  PUBLISHING.md  README.md  SUBNET_HANDLER_FINAL.md  SUBNET_HANDLER_REFACTORING.md  arch.json  architecture  architecture-with-source.json  architecture.dot  architecture.gv  architecture.gv.dot  architecture.json  buildspec.yml  clearcache.sh  data.json  demo-azure.html  docker-entrypoint.sh  eks-agones-architecture.json  final copy.json  final.json  find_shared_sg.py  flake.nix  graph-correct.json  graph-new.json  graphdict.json  (+22 more)
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json  post_create.sh
.github/: pull_request_template.md
.github/workflows/: docs.yml  lint-and-test.yml  publish-to-dockerhub.yml  publish-to-pypi.yml
.specify/memory/: constitution.md
CONTRIBUTING/: index.html
Category Icons/Security Identity/: Security Identity.ai
ai-backend-terraform/: aws-sso.sh  main.tf  terraform.tfvars  test_payload.json  testbackend.py
ai-backend-terraform/lambda/: handler.py  index.mjs  package-lock.json  package.json  requirements.txt
annotations/: index.html
cicd-integration/: index.html
cli/: cli.py
constitution/: index.html
developer-docs/: ARCHITECTURE.md  BUG-FIXES-GUIDE.md  EXTENDING-HANDLERS.md  TESTING-STRATEGY.md
developer-guide/: index.html
docs/: ADDING_PROVIDERS.md  ANNOTATIONS.md  ARCHITECTURAL.md  AZURE_RESOURCE_HANDLERS.md  BASELINE_VALIDATION_CHECKLIST.md  CICD_INTEGRATION.md  CLAUDE.md  CODEREVIEW.md  CONFIGURATION_DRIVEN_HANDLERS.md  CONTRIBUTING.md  DYNAMIC_IMPLEMENTATION_COMPLETE.md  EXPECTED_JSON_MODIFICATION_POLICY.md  FINAL_IMPLEMENTATION.md  GCP_RESOURCE_HANDLERS.md  HANDLER_ARCHITECTURE.md  HANDLER_CONFIG_GUIDE.md  HANDLER_EXECUTION_ORDER.md  HANDLER_REFACTORING_GUIDE.md  HYBRID_HANDLER_EXPANSION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LEARNINGS_DRAWIO_NATIVE.md  POST_IMPLEMENTATION_VALIDATION.md  QUICKSTART.md  README.md  RESOURCE_HANDLER_GUIDE.md  ROADMAP.md  SAFEGUARDS_SUMMARY.md  SECURITY-AUDIT.md  TFE_SUPPORT_SUMMARY.md  TO_BE_FIXED.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  VALIDATION_FINDINGS.md  annotations.md  cicd-integration.md  constitution.md  current-status.md  demo-aws.html  (+9 more)
docs/aws_resource_handlers/: autoscaling.md  container-orchestration.md  content-delivery.md  database-resources.md  index.md  load-balancing.md  network-topology.md  resource-matching.md  security-groups.md  shared-services.md  storage-file-systems.md
examples/: architecture.gv  terraform.tfvars  variables.tfvars
faq/: index.html
hcl2/: hcl2.lark
installation/: index.html
modules/: annotations.py  cloud_config.py  cloud_config_aws.py  config_loader.py  detect_multi_instance_resources.py  drawing copy.py  drawing.py  drawio_emitter.py  exceptions.py  fileparser.py  gitlibs.py  graphdict.json  graphmaker.py  helpers.py  html_renderer.py  interpreter.py  llm.py  node_factory.py  plan_resolver.py  postfix.py  provider_detector.py  provider_runtime.py  resource_handlers.py  resource_handlers_aws.py  resource_handlers_azure.py  resource_handlers_gcp.py  resource_transformers.py  service_mapping.py  tf_function_handlers.py  tfwrapper.py  tgwrapper.py  validators.py  xdot_parser.py
output/: result.json
resource-handler-guide/: index.html
resource_classes/: __init__.py
scripts/: generate_drawio_shape_maps.py
search/: search_index.json
specs/: SPEC-001-provider-abstraction-layer.md
terravision/: terravision.py
test/: main.tf
tests/: annotations_unit_test.py  conftest.py  fileparser_unit_test.py  graphmaker_unit_test.py  helpers_unit_test.py  integration_test.py  interpreter_unit_test.py  output.json  performance_test.py  test_ai_annotations.py  test_annotation_merge.py  test_azure_resources.py  test_config_loader.py  test_dependencies.py  test_dot_validation.py  test_drawio_emitter.py  test_flow_badges.py  test_gcp_grouping_styles.py  test_gcp_hierarchy_validation.py  test_gcp_icon_mapping.py  test_gitlibs.py  test_html_renderer.py  test_module_output_resolution.py  test_planfile_input.py  test_provider_detection.py  test_terragrunt_detection.py  test_tgwrapper.py  test_validation.py  test_visualise_command.py  test_xdot_parser.py  testcase-aws-static-site.json  testcase-wordpress-terraform.json  testcase-wordpress.json  tfwrapper_unit_test.py  validation_helpers.py
troubleshooting/: index.html
usage-guide/: index.html
(+425 files in other folders)
