[tool.poetry]
# Change this section to be project specific
name = "terravision"
version = "0.8"
description = "Terraform Architecture Visualizer"
authors = []
readme = 'README.md'
exclude = []
package-mode = false


[tool.poetry.dependencies]
click = "8.1.3"
GitPython = "3.1.31"
graphviz = "0.20.1"
requests = "2.28.2"
tqdm = "4.65.0"
python-hcl2 = "4.3.0"
python = ">=3.9,<3.12"
PyYAML = "6.0"
debugpy = "^1.8.0"
ipaddr = "^2.2.0"
ollama = "^0.6.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"


[tool.isort]
skip = ["drawing.py"]
