[build-system]
requires = ["setuptools>=42", "wheel", "pyinstaller"]
build-backend = "setuptools.build_meta"

[project]
name = "terravision"
version = "0.6"
dependencies = [
    "Click",
    "python-hcl2",
    "GitPython",
    "graphviz",
    "requests",
    "tqdm",
]

[project.scripts]
terravision = "terravision:cli"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["modules*", "resource_classes*", "resource_images*", "hcl2*"]
exclude = ["tests*"] 
namespaces = false  # true by default

[tool.poetry]
# Change this section to be project specific
name = "terravision"
version = "0.9"
description = "Terraform Architecture Visualizer"
authors = []
readme = 'README.md'
exclude = []

[tool.poetry.dependencies]
click = "8.1.3"
GitPython = "3.1.31"
graphviz = "0.20.1"
tqdm = "4.65.0"
python-hcl2 = "4.3.0"
python = ">=3.9"
PyYAML = ">=6.0"
debugpy = "^1.8.0"
ipaddr = "^2.2.0"
ollama = "^0.6.1"
requests = ">=2.32.3"
typing-extensions = "^4.0.0"
tomli = "^2.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
black = "24.3.0"
isort = "^5.12.0"



[tool.poetry.group.dev.dependencies]
pre-commit = "<4.0"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
skip = ["drawing.py"]

[tool.pyinstaller]
name = "terravision"
onefile = true
add-data = [
    "resource_images:resource_images",
    "hcl2:hcl2"
]