[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "terravision"
version = "0.11.0"
description = "Terraform Architecture Visualizer"
readme = "README.md"
authors = [{ name = "Patrick Chugh", email = "terravisionapp@gmail.com" }]
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.3",
    "GitPython>=3.1.31",
    "graphviz>=0.20.1",
    "tqdm>=4.65.0",
    "python-hcl2==4.3.0",
    "PyYAML>=6.0",
    "debugpy>=1.8.0",
    "ipaddr>=2.2.0",
    "ollama>=0.6.1",
    "requests>=2.32.3", 
    "typing-extensions>=4.0.0",
    "tomli>=2.0.1"
]

[project.scripts]
terravision = "terravision.terravision:main"

[tool.poetry]
name = "terravision"
version = "0.11.0"
description = "Terraform Architecture Visualizer"
authors = ["Patrick Chugh <terravisionapp@gmail.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
exclude = []
packages = [
    { include = "terravision" },
    { include = "modules" },
    { include = "resource_classes" }
]
include = [
    { path = "terravision.py", format = ["sdist", "wheel"] },
    { path = "pyproject.toml", format = ["sdist", "wheel"] },
    { path = "shiftLabel.gvpr", format = ["sdist", "wheel"] },
    { path = "override.tf", format = ["sdist", "wheel"] },
    { path = "terravision.bat", format = ["sdist", "wheel"] },
    { path = "resource_images/**/*", format = ["sdist", "wheel"] },
    { path = "hcl2/**/*", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
click = "8.1.3"
GitPython = "3.1.31"
graphviz = "0.20.1"
tqdm = "4.65.0"
python-hcl2 = "4.3.0"
python = ">=3.11"
PyYAML = ">=6.0"
debugpy = "^1.8.0"
ipaddr = "^2.2.0"
ollama = "^0.6.1"
requests = ">=2.32.3"
typing-extensions = "^4.0.0"
tomli = "^2.0.1"
 
[tool.poetry.scripts]
terravision = "terravision.terravision:main"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
black = "24.3.0"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "<4.0"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
# use a double-quoted string with escaped backslash so the regex is valid TOML
include = "\\.pyi?$"
# use a literal (single-quoted triple) string so backslashes inside are not treated as escapes
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
skip = ["drawing.py"]
